# cloddo

./: .gitignore  ACCOMPLISHMENT_TRACKER.md  AI_INSTRUCTIONS.md  CLAUDE.md  CONTINUITY_BEDTIME_PROTOCOL.md  ISSUE_FIXES_SUMMARY.md  KNOWLEDGE_BASE.md  LOCAL_TESTING_GUIDE.md  PROJECT_ARCHITECTURE_DIAGRAM.html  PROJECT_MEMORY.md  README.md  TECHNICAL_FEASIBILITY_REPORT.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/agents/: executor.rs  mod.rs  runtime.rs  scheduler.rs
src-tauri/src/commands/: agent.rs  chat.rs  mod.rs  oauth.rs  project.rs  settings.rs  workflow.rs
src-tauri/src/database/: connection.rs  migrations.rs  mod.rs  models.rs
src-tauri/src/integrations/: anthropic.rs  filesystem.rs  mcp.rs  mod.rs
src-tauri/src/utils/: config.rs  crypto.rs  logger.rs  mod.rs
src-tauri/src/workflows/: actions.rs  executor.rs  mod.rs  triggers.rs
src/components/common/: ErrorBoundary.tsx
src/components/layout/: Header.tsx  Layout.tsx  MainContent.tsx  Sidebar.tsx  StatusBar.tsx  index.ts
src/components/settings/: SettingsModal.tsx
src/services/: claudeApi.ts
src/stores/: agentStore.ts  chatStore.ts  settingsStore.ts  workflowStore.ts
src/types/: agent.ts  api.ts  chat.ts  index.ts  settings.ts  workflow.ts
src/utils/: constants.ts  helpers.ts
